src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const _STDINT_H: u32 = 1;
pub const _FEATURES_H: u32 = 1;
pub const _DEFAULT_SOURCE: u32 = 1;
pub const __GLIBC_USE_ISOC2Y: u32 = 0;
pub const __GLIBC_USE_ISOC23: u32 = 0;
pub const __USE_ISOC11: u32 = 1;
pub const __USE_ISOC99: u32 = 1;
pub const __USE_ISOC95: u32 = 1;
pub const __USE_POSIX_IMPLICITLY: u32 = 1;
pub const _POSIX_SOURCE: u32 = 1;
pub const _POSIX_C_SOURCE: u32 = 200809;
pub const __USE_POSIX: u32 = 1;
pub const __USE_POSIX2: u32 = 1;
pub const __USE_POSIX199309: u32 = 1;
pub const __USE_POSIX199506: u32 = 1;
pub const __USE_XOPEN2K: u32 = 1;
pub const __USE_XOPEN2K8: u32 = 1;
pub const _ATFILE_SOURCE: u32 = 1;
pub const __WORDSIZE: u32 = 64;
pub const __WORDSIZE_TIME64_COMPAT32: u32 = 1;
pub const __SYSCALL_WORDSIZE: u32 = 64;
pub const __TIMESIZE: u32 = 64;
pub const __USE_TIME_BITS64: u32 = 1;
pub const __USE_MISC: u32 = 1;
pub const __USE_ATFILE: u32 = 1;
pub const __USE_FORTIFY_LEVEL: u32 = 0;
pub const __GLIBC_USE_DEPRECATED_GETS: u32 = 0;
pub const __GLIBC_USE_DEPRECATED_SCANF: u32 = 0;
pub const __GLIBC_USE_C23_STRTOL: u32 = 0;
pub const _STDC_PREDEF_H: u32 = 1;
pub const __STDC_IEC_559__: u32 = 1;
pub const __STDC_IEC_60559_BFP__: u32 = 201404;
pub const __STDC_IEC_559_COMPLEX__: u32 = 1;
pub const __STDC_IEC_60559_COMPLEX__: u32 = 201404;
pub const __STDC_ISO_10646__: u32 = 201706;
pub const __GNU_LIBRARY__: u32 = 6;
pub const __GLIBC__: u32 = 2;
pub const __GLIBC_MINOR__: u32 = 42;
pub const _SYS_CDEFS_H: u32 = 1;
pub const __glibc_c99_flexarr_available: u32 = 1;
pub const __LDOUBLE_REDIRECTS_TO_FLOAT128_ABI: u32 = 0;
pub const __HAVE_GENERIC_SELECTION: u32 = 1;
pub const __GLIBC_USE_LIB_EXT2: u32 = 0;
pub const __GLIBC_USE_IEC_60559_BFP_EXT: u32 = 0;
pub const __GLIBC_USE_IEC_60559_BFP_EXT_C23: u32 = 0;
pub const __GLIBC_USE_IEC_60559_EXT: u32 = 0;
pub const __GLIBC_USE_IEC_60559_FUNCS_EXT: u32 = 0;
pub const __GLIBC_USE_IEC_60559_FUNCS_EXT_C23: u32 = 0;
pub const __GLIBC_USE_IEC_60559_TYPES_EXT: u32 = 0;
pub const _BITS_TYPES_H: u32 = 1;
pub const _BITS_TYPESIZES_H: u32 = 1;
pub const __OFF_T_MATCHES_OFF64_T: u32 = 1;
pub const __INO_T_MATCHES_INO64_T: u32 = 1;
pub const __RLIM_T_MATCHES_RLIM64_T: u32 = 1;
pub const __STATFS_MATCHES_STATFS64: u32 = 1;
pub const __KERNEL_OLD_TIMEVAL_MATCHES_TIMEVAL64: u32 = 1;
pub const __FD_SETSIZE: u32 = 1024;
pub const _BITS_TIME64_H: u32 = 1;
pub const _BITS_WCHAR_H: u32 = 1;
pub const _BITS_STDINT_INTN_H: u32 = 1;
pub const _BITS_STDINT_UINTN_H: u32 = 1;
pub const _BITS_STDINT_LEAST_H: u32 = 1;
pub const __bool_true_false_are_defined: u32 = 1;
pub const C_INPUT: u32 = 0;
pub const C_OUTPUT: u32 = 1;
pub const C_INPUT_PULLUP: u32 = 2;
pub const C_LOW: u32 = 0;
pub const C_HIGH: u32 = 1;
pub const C_CHANGE: u32 = 1;
pub const C_FALLING: u32 = 2;
pub const C_RISING: u32 = 3;
pub const C_LSBFIRST: u32 = 0;
pub const C_MSBFIRST: u32 = 1;
pub type __u_char = ::core::ffi::c_uchar;
pub type __u_short = ::core::ffi::c_ushort;
pub type __u_int = ::core::ffi::c_uint;
pub type __u_long = ::core::ffi::c_ulong;
pub type __int8_t = ::core::ffi::c_schar;
pub type __uint8_t = ::core::ffi::c_uchar;
pub type __int16_t = ::core::ffi::c_short;
pub type __uint16_t = ::core::ffi::c_ushort;
pub type __int32_t = ::core::ffi::c_int;
pub type __uint32_t = ::core::ffi::c_uint;
pub type __int64_t = ::core::ffi::c_long;
pub type __uint64_t = ::core::ffi::c_ulong;
pub type __int_least8_t = __int8_t;
pub type __uint_least8_t = __uint8_t;
pub type __int_least16_t = __int16_t;
pub type __uint_least16_t = __uint16_t;
pub type __int_least32_t = __int32_t;
pub type __uint_least32_t = __uint32_t;
pub type __int_least64_t = __int64_t;
pub type __uint_least64_t = __uint64_t;
pub type __quad_t = ::core::ffi::c_long;
pub type __u_quad_t = ::core::ffi::c_ulong;
pub type __intmax_t = ::core::ffi::c_long;
pub type __uintmax_t = ::core::ffi::c_ulong;
pub type __dev_t = ::core::ffi::c_ulong;
pub type __uid_t = ::core::ffi::c_uint;
pub type __gid_t = ::core::ffi::c_uint;
pub type __ino_t = ::core::ffi::c_ulong;
pub type __ino64_t = ::core::ffi::c_ulong;
pub type __mode_t = ::core::ffi::c_uint;
pub type __nlink_t = ::core::ffi::c_ulong;
pub type __off_t = ::core::ffi::c_long;
pub type __off64_t = ::core::ffi::c_long;
pub type __pid_t = ::core::ffi::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __fsid_t {
    pub __val: [::core::ffi::c_int; 2usize],
}

pub type __clock_t = ::core::ffi::c_long;
pub type __rlim_t = ::core::ffi::c_ulong;
pub type __rlim64_t = ::core::ffi::c_ulong;
pub type __id_t = ::core::ffi::c_uint;
pub type __time_t = ::core::ffi::c_long;
pub type __useconds_t = ::core::ffi::c_uint;
pub type __suseconds_t = ::core::ffi::c_long;
pub type __suseconds64_t = ::core::ffi::c_long;
pub type __daddr_t = ::core::ffi::c_int;
pub type __key_t = ::core::ffi::c_int;
pub type __clockid_t = ::core::ffi::c_int;
pub type __timer_t = *mut ::core::ffi::c_void;
pub type __blksize_t = ::core::ffi::c_long;
pub type __blkcnt_t = ::core::ffi::c_long;
pub type __blkcnt64_t = ::core::ffi::c_long;
pub type __fsblkcnt_t = ::core::ffi::c_ulong;
pub type __fsblkcnt64_t = ::core::ffi::c_ulong;
pub type __fsfilcnt_t = ::core::ffi::c_ulong;
pub type __fsfilcnt64_t = ::core::ffi::c_ulong;
pub type __fsword_t = ::core::ffi::c_long;
pub type __ssize_t = ::core::ffi::c_long;
pub type __syscall_slong_t = ::core::ffi::c_long;
pub type __syscall_ulong_t = ::core::ffi::c_ulong;
pub type __loff_t = __off64_t;
pub type __caddr_t = *mut ::core::ffi::c_char;
pub type __intptr_t = ::core::ffi::c_long;
pub type __socklen_t = ::core::ffi::c_uint;
pub type __sig_atomic_t = ::core::ffi::c_int;

#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct max_align_t {
    pub __clang_max_align_nonce1: ::core::ffi::c_longlong,
    pub __bindgen_padding_0: u64,
    pub __clang_max_align_nonce2: u128,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of max_align_t"][::core::mem::size_of::<max_align_t>() - 32usize];
    ["Alignment of max_align_t"][::core::mem::align_of::<max_align_t>() - 16usize];
    ["Offset of field: max_align_t::__clang_max_align_nonce1"]
        [::core::mem::offset_of!(max_align_t, __clang_max_align_nonce1) - 0usize];
    ["Offset of field: max_align_t::__clang_max_align_nonce2"]
        [::core::mem::offset_of!(max_align_t, __clang_max_align_nonce2) - 16usize];
};
unsafe extern "C" {
    pub fn c_init();
}
unsafe extern "C" {
    pub fn c_pin_mode(pin: u8, mode: u8);
}
unsafe extern "C" {
    pub fn c_digital_write(pin: u8, val: u8);
}
unsafe extern "C" {
    pub fn c_digital_read(pin: u8) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn c_analog_reference(mode: u8);
}
unsafe extern "C" {
    pub fn c_analog_write(pin: u8, val: ::core::ffi::c_int);
}
unsafe extern "C" {
    pub fn c_analog_read(pin: u8) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn c_millis() -> ::core::ffi::c_ulong;
}
unsafe extern "C" {
    pub fn c_micros() -> ::core::ffi::c_ulong;
}
unsafe extern "C" {
    pub fn c_delay(ms: ::core::ffi::c_ulong);
}
unsafe extern "C" {
    pub fn c_delay_microseconds(us: ::core::ffi::c_uint);
}
unsafe extern "C" {
    pub fn c_tone(pin: u8, frequency: ::core::ffi::c_uint, duration: ::core::ffi::c_ulong);
}
unsafe extern "C" {
    pub fn c_no_tone(pin: u8);
}
unsafe extern "C" {
    pub fn c_shift_out(data_pin: u8, clock_pin: u8, bit_order: u8, val: u8);
}
unsafe extern "C" {
    pub fn c_shift_in(data_pin: u8, clock_pin: u8, bit_order: u8) -> u8;
}
unsafe extern "C" {
    pub fn c_pulse_in(pin: u8, state: u8, timeout: ::core::ffi::c_ulong) -> ::core::ffi::c_ulong;
}
unsafe extern "C" {
    pub fn c_map(
        value: ::core::ffi::c_long,
        fromLow: ::core::ffi::c_long,
        fromHigh: ::core::ffi::c_long,
        toLow: ::core::ffi::c_long,
        toHigh: ::core::ffi::c_long,
    ) -> ::core::ffi::c_long;
}
unsafe extern "C" {
    pub fn c_constrain(
        x: ::core::ffi::c_long,
        a: ::core::ffi::c_long,
        b: ::core::ffi::c_long,
    ) -> ::core::ffi::c_long;
}
unsafe extern "C" {
    pub fn c_random_seed(seed: ::core::ffi::c_ulong);
}
unsafe extern "C" {
    pub fn c_random_max(max: ::core::ffi::c_long) -> ::core::ffi::c_long;
}
unsafe extern "C" {
    pub fn c_random_range(
        min: ::core::ffi::c_long,
        max: ::core::ffi::c_long,
    ) -> ::core::ffi::c_long;
}
unsafe extern "C" {
    pub fn c_attach_interrupt(
        interruptNum: u8,
        userFunc: ::core::option::Option<unsafe extern "C" fn()>,
        mode: ::core::ffi::c_int,
    );
}
unsafe extern "C" {
    pub fn c_detach_interrupt(interruptNum: u8);
}
unsafe extern "C" {
    pub fn c_interrupts();
}
unsafe extern "C" {
    pub fn c_no_interrupts();
}
unsafe extern "C" {
    pub fn c_serial_begin(baudRate: ::core::ffi::c_ulong);
}
unsafe extern "C" {
    pub fn c_serial_end();
}
unsafe extern "C" {
    pub fn c_serial_available() -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn c_serial_read() -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn c_serial_peek() -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn c_serial_flush();
}
unsafe extern "C" {
    pub fn c_serial_write(val: u8) -> usize;
}
unsafe extern "C" {
    pub fn c_serial_write_buffer(buf: *const u8, len: usize) -> usize;
}
unsafe extern "C" {
    pub fn c_serial_print_str(str_: *const ::core::ffi::c_char) -> usize;
}
unsafe extern "C" {
    pub fn c_serial_println_str(str_: *const ::core::ffi::c_char) -> usize;
}
unsafe extern "C" {
    pub fn c_serial_print_int(val: ::core::ffi::c_int) -> usize;
}
unsafe extern "C" {
    pub fn c_serial_println_int(val: ::core::ffi::c_int) -> usize;
}
unsafe extern "C" {
    pub fn c_wire_begin();
}
unsafe extern "C" {
    pub fn c_wire_begin_slave(address: u8);
}
unsafe extern "C" {
    pub fn c_wire_request_from(address: u8, quantity: u8, stop: bool) -> u8;
}
unsafe extern "C" {
    pub fn c_wire_begin_transmission(address: u8);
}
unsafe extern "C" {
    pub fn c_wire_end_transmission(stop: bool) -> u8;
}
unsafe extern "C" {
    pub fn c_wire_write(value: u8) -> usize;
}
unsafe extern "C" {
    pub fn c_wire_write_buffer(data: *const u8, quantity: usize) -> usize;
}
unsafe extern "C" {
    pub fn c_wire_available() -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn c_wire_read() -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn c_wire_on_receive(
        function: ::core::option::Option<unsafe extern "C" fn(arg1: ::core::ffi::c_int)>,
    );
}
unsafe extern "C" {
    pub fn c_wire_on_request(function: ::core::option::Option<unsafe extern "C" fn()>);
}
unsafe extern "C" {
    pub fn c_spi_begin();
}
unsafe extern "C" {
    pub fn c_spi_end();
}
unsafe extern "C" {
    pub fn c_spi_begin_transaction(clockSpeed: u32, bitOrder: u8, dataMode: u8);
}
unsafe extern "C" {
    pub fn c_spi_end_transaction();
}
unsafe extern "C" {
    pub fn c_spi_transfer(val: u8) -> u8;
}
unsafe extern "C" {
    pub fn c_spi_transfer16(val: u16) -> u16;
}
unsafe extern "C" {
    pub fn c_spi_transfer_buffer(buf: *mut ::core::ffi::c_void, count: usize);
}
